<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/sign_rr"
    tools:context=".register.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rr_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textAlignment="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/rr_login"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_sign_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@android:color/transparent"
                android:gravity="left|center"
                android:textCursorDrawable="@drawable/color_cursor"
                android:maxLength="50"
                android:hint="@string/name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/black" />


        <TextView
            android:id="@+id/tv_first_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text=" Please Enter Name"
            android:textSize="@dimen/sp14"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ll_sign_first"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"

            />


        <LinearLayout
            android:id="@+id/ll_sign_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@android:color/transparent"
                android:gravity="left|center"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/email_id"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/black" />


        <TextView
            android:id="@+id/tv_email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="Please Enter Email ID"
            android:textSize="@dimen/sp14"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ll_sign_email"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"/>


        <TextView
            android:id="@+id/tv_email_error1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="Please Enter Valid Email ID"
            android:textSize="@dimen/sp14"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tv_email_error"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"/>


        <LinearLayout
            android:id="@+id/ll_sign_mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_no"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp"
                android:maxLength="10"
                android:inputType="number"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/black" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/black" />
        <TextView
            android:id="@+id/tv_phone_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="Please Enter Mobile Number"
            android:textSize="@dimen/sp14"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ll_sign_mobile"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"/>

        <TextView
            android:id="@+id/tv_phone_error1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="Please Enter Valid Mobile Number"
            android:textSize="@dimen/sp14"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tv_phone_error"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_password"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/img_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_remove_red_eye_black_24dp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/black" />


        <TextView
            android:id="@+id/tv_pass_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="Please Enter Password"
            android:textSize="@dimen/sp14"
            android:visibility="gone"
            android:layout_marginTop="6dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/email_password"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/confirm_password"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_pass_error1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="Please Enter Confirm Password"
            android:textSize="@dimen/sp14"
            android:visibility="gone"
            android:layout_marginTop="6dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/email_password"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red" />

<!--        -->
<!--        <TextView-->
<!--            android:id="@+id/tv_pass_error1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textStyle="normal"-->
<!--            android:text="Password Doest not Match"-->
<!--            android:textSize="@dimen/sp13"-->
<!--            android:visibility="gone"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:layout_alignParentLeft="true"-->
<!--            android:layout_marginLeft="40dp"-->
<!--            android:layout_marginRight="40dp"-->
<!--            android:layout_below="@+id/tv_pass_error"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:textColor="@color/red" />-->

<!--   -->

    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_sub"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:elevation="8dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_below="@+id/input_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_btn_orange">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.TextView.Login"/>

        </LinearLayout>

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>